--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-homework-template",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Demiurge232.github.io/goit-react-hw-03-image-finder/",
+  "homepage": "https://Demiurge232.github.io/goit-react-hw-04-images/",
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
@@ -16,6 +16,7 @@
     "react-icons": "^4.8.0",
     "react-loader-spinner": "^5.3.4",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.2",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
